--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,58 @@
   margin-left: 250px;
   transition: margin-left 0.3s;
 }
+
+.search{
+  margin-left: 430px;
+}
+
+.search-bar {
+  display: flex;
+  margin-top: 35px;
+  width: 100%;
+  max-width: 400px;
+  border: 1px solid #ddd;
+  border-radius: 20px;
+  overflow: hidden;
+}
+
+.search-bar input{
+  flex: 1;
+  padding: 10px;
+  border: none;
+  outline: none;
+}
+
+.search-bar button{
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 0 20px 20px 0;
+  cursor: pointer;
+}
+
+.clear-btn{
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+}
+
+.search-bar button:hover, .clear-btn:hover {
+  background-color: #45a049;
+}
+
+.h{
+  text-align: left;
+  margin-top: 40px;
+}
+
+.p{
+  margin-left: -610px;
+  font-size: 17px;
+}
+
+
+
