--- a/src/About.css
+++ b/src/About.css
@@ -1,6 +1,7 @@
 .about {
     background-color: #fff9e9;
     padding: 50px 0;
+    margin-top: 50px;
 }
   
 .ex1{
@@ -23,14 +24,6 @@
     transform: scale(1.02);
     cursor: pointer;
 }
-  
-
-.about-image {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: cover;
-}
-  
   
 
 .about-image {
